[package]
name = "lesbean-gay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = { version = "0.2.30", features = ["rust_1_64"] }
rand = "0.8.5"
serde_json = "1.0.91"
worker = "0.0.12"
getrandom = { version = "0.2.8", features = ["js"] }
